[gd_scene load_steps=24 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://PlayerBullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://art/playerShip2_orange.png" type="Texture" id=3]
[ext_resource path="res://art/shield1.png" type="Texture" id=4]
[ext_resource path="res://art/shield2.png" type="Texture" id=5]
[ext_resource path="res://art/shield3.png" type="Texture" id=6]
[ext_resource path="res://art/fire15.png" type="Texture" id=7]
[ext_resource path="res://art/fire14.png" type="Texture" id=8]
[ext_resource path="res://art/fire11.png" type="Texture" id=9]
[ext_resource path="res://art/effect1.png" type="Texture" id=10]
[ext_resource path="res://audio/laser2.wav" type="AudioStream" id=11]
[ext_resource path="res://audio/player_hit.wav" type="AudioStream" id=12]
[ext_resource path="res://audio/shield_down.wav" type="AudioStream" id=13]
[ext_resource path="res://audio/pickup.wav" type="AudioStream" id=14]
[ext_resource path="res://audio/flight_sound.ogg" type="AudioStream" id=15]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 27.287

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "shield",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Gradient" id=12]

offsets = PoolRealArray( 0, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 0, 0, 1 )

[sub_resource type="GradientTexture" id=13]

flags = 4
gradient = SubResource( 12 )
width = 2048

[sub_resource type="Curve" id=10]

min_value = 0.0
max_value = 1.0
bake_resolution = 100
_data = [ Vector2( 0, 0 ), 0.0, 7.55515, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=11]

flags = 4
width = 2048
curve = SubResource( 10 )

[sub_resource type="ParticlesMaterial" id=4]

render_priority = 0
trail_divisor = 1
emission_shape = 2
emission_box_extents = Vector3( 1, 4, 1 )
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 0.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 400.0
initial_velocity_random = 0.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 0.05
scale_random = 0.0
scale_curve = SubResource( 11 )
color_ramp = SubResource( 13 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = true
_sections_unfolded = [ "Angle", "Angular Velocity", "Animation", "Color", "Damping", "Emission Shape", "Gravity", "Hue Variation", "Initial Velocity", "Linear Accel", "Orbit Velocity", "Radial Accel", "Resource", "Scale", "Spread", "Tangential Accel", "Trail" ]

[node name="Player" type="Area2D" index="0"]

input_pickable = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}
bullet = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="." index="0"]

rotation = 1.5708
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

visible = false
shape = SubResource( 1 )

[node name="Muzzle" type="Position2D" parent="." index="2"]

position = Vector2( 50, 0 )
_sections_unfolded = [ "Transform" ]

[node name="MuzzleLeft" type="Position2D" parent="." index="3"]

position = Vector2( 25, -25 )
_sections_unfolded = [ "Transform" ]

[node name="MuzzleRight" type="Position2D" parent="." index="4"]

position = Vector2( 25, 25 )
_sections_unfolded = [ "Transform" ]

[node name="GunTimer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 0.15
one_shot = true
autostart = false

[node name="Shield" type="AnimatedSprite" parent="." index="6"]

rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 2 )
animation = "shield"
frame = 2
_sections_unfolded = [ "Transform" ]

[node name="Exhaust" type="AnimatedSprite" parent="." index="7"]

visible = false
position = Vector2( -35, 0 )
rotation = 1.5708
frames = SubResource( 3 )
animation = "default"
playing = true
_sections_unfolded = [ "Transform" ]

[node name="ExhaustFlame" type="Particles2D" parent="." index="8"]

show_behind_parent = true
position = Vector2( -20, 0 )
rotation = 3.14159
emitting = true
amount = 50
lifetime = 0.1
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 4 )
texture = ExtResource( 10 )
normal_map = null
h_frames = 8
v_frames = 4
_sections_unfolded = [ "Drawing", "Material", "Pause", "Process Material", "Textures", "Time", "Transform", "Visibility", "Z Index" ]

[node name="LaserSound" type="AudioStreamPlayer" parent="." index="9"]

stream = ExtResource( 11 )
volume_db = -5.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="HitSound" type="AudioStreamPlayer" parent="." index="10"]

stream = ExtResource( 12 )
volume_db = -5.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="ShieldDownSound" type="AudioStreamPlayer" parent="." index="11"]

stream = ExtResource( 13 )
volume_db = -5.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="PickupSound" type="AudioStreamPlayer" parent="." index="12"]

stream = ExtResource( 14 )
volume_db = -5.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="ThrustSound" type="AudioStreamPlayer" parent="." index="13"]

stream = ExtResource( 15 )
volume_db = -12.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]


